# osnova

./: ARCHITECTURE.md  CMakeLists.txt  README.md  fix_optimized.cjs  fix_simulate.cjs  metadata.json  package-lock.json  package.json  replace.cjs  replace2.cjs  server.ts
src/: App.tsx  index.css
src/components/: ChatInterface.tsx
src/components/ui/: button.tsx  card.tsx
src/core/bindings/: wasm_api.cpp
src/core/crypto/: aead_chacha20.cpp  aead_chacha20.h  aes_gcm.cpp  aes_gcm.h  aes_key_wrap.cpp  aes_key_wrap.h  argon2.cpp  argon2.h  bignum.cpp  bignum.h  blake2b.cpp  blake2b.h  bls.cpp  bls.h  bulletproofs.cpp  bulletproofs.h  chacha20.cpp  chacha20.h  curve25519.cpp  curve25519.h  dilithium.cpp  dilithium.h  double_ratchet.cpp  double_ratchet.h  ecdsa.cpp  ecdsa.h  ecies.cpp  ecies.h  ed25519.cpp  ed25519.h  falcon.cpp  falcon.h  ff_bn254.cpp  ff_bn254.h  ff_bn254_fq2.cpp  ff_bn254_fq2.h  fiat_shamir_transcript.cpp  fiat_shamir_transcript.h  garbled_circuit.cpp  garbled_circuit.h  (+113 more)
src/core/db/: lsm_tree.cpp  lsm_tree.h
src/core/ds/: adaptive_radix_tree.cpp  adaptive_radix_tree.h  bloom_filter.cpp  bloom_filter.h  crdt_map.cpp  crdt_map.h  cuckoo_filter.cpp  cuckoo_filter.h  hyperloglog.cpp  hyperloglog.h  lfu_cache.h  merkle_mtrie.cpp  merkle_mtrie.h  ring_buffer.cpp  ring_buffer.h  skip_list.cpp  skip_list.h
src/core/dsp/: acoustic_modem.h  afsk_modulator.cpp  afsk_modulator.h  audio_modem.cpp  audio_modem.h  fec_engine.cpp  fec_engine.h  reed_solomon.cpp  reed_solomon.h
src/core/json/: bson_parser.cpp  bson_parser.h  json_parser.cpp  json_parser.h
src/core/media/: av1_parser.cpp  av1_parser.h  h264_parser.cpp  h264_parser.h  jitter_buffer.cpp  jitter_buffer.h  opus_packetizer.cpp  opus_packetizer.h  rtp_packetizer.cpp  rtp_packetizer.h  sdp_parser.cpp  sdp_parser.h  srtp_session.cpp  srtp_session.h  webrtc_ice.cpp  webrtc_ice.h
src/core/mesh/: atomic_ledger.cpp  atomic_ledger.h  bbr_congestion.cpp  bbr_congestion.h  bencode.cpp  bencode.h  blockchain_vm.cpp  blockchain_vm.h  dtn_router.cpp  dtn_router.h  gossip_sub.cpp  gossip_sub.h  kademlia_dht.cpp  kademlia_dht.h  kvm_clock.cpp  kvm_clock.h  merkle_trie.cpp  merkle_trie.h  mesh_node.cpp  mesh_node.h  packet_processor.cpp  packet_processor.h  pbft_consensus.cpp  pbft_consensus.h  routing_table.cpp  routing_table.h  rpc_dispatcher.cpp  rpc_dispatcher.h  rpc_schema.cpp  rpc_schema.h  serialize.cpp  serialize.h  session_manager.cpp  session_manager.h  sharding_manager.cpp  sharding_manager.h  sphinx_packet.cpp  sphinx_packet.h  torrent_engine.cpp  torrent_engine.h  (+2 more)
src/core/net/: bbr_congestion.cpp  bbr_congestion.h  hpack.cpp  hpack.h  ice_agent.cpp  ice_agent.h  kcp_session.cpp  kcp_session.h  multiplexer.cpp  multiplexer.h  onion_router.cpp  onion_router.h  quic_session.cpp  quic_session.h  rabin_cdc.cpp  rabin_cdc.h  sip_stack.cpp  sip_stack.h  stun_client.cpp  stun_client.h  tcp_transport.cpp  tcp_transport.h  turn_client.cpp  turn_client.h  udp_transport.cpp  udp_transport.h
src/core/quic/: quic_connection.cpp  quic_connection.h  quic_engine.cpp  quic_engine.h
src/core/routing/: routing_brain.cpp  routing_brain.h
src/lib/: crypto.ts  osnova-binding.ts  webrtc.ts
src/store/: useNetworkStore.ts
